syntax = "proto3";

package portfolio.v1;

// import "buf/validate/validate.proto";

service CastService {
  rpc GetCastProfile(GetCastProfileRequest) returns (GetCastProfileResponse);
  rpc GetCastProfileByHandle(GetCastProfileByHandleRequest) returns (GetCastProfileResponse);
  rpc CreateCastProfile(CreateCastProfileRequest) returns (CreateCastProfileResponse);
  rpc SaveCastProfile(SaveCastProfileRequest) returns (SaveCastProfileResponse);
  rpc SaveCastVisibility(SaveCastVisibilityRequest) returns (SaveCastVisibilityResponse);
  rpc SaveCastImages(SaveCastImagesRequest) returns (SaveCastImagesResponse);
  rpc SaveCastPlans(SaveCastPlansRequest) returns (SaveCastPlansResponse);
  rpc SaveCastSchedules(SaveCastSchedulesRequest) returns (SaveCastSchedulesResponse);
  rpc ListCasts(ListCastsRequest) returns (ListCastsResponse);
  rpc GetUploadUrl(GetUploadUrlRequest) returns (GetUploadUrlResponse);
  rpc CheckHandleAvailability(CheckHandleAvailabilityRequest) returns (CheckHandleAvailabilityResponse);
  rpc ListAreas(ListAreasRequest) returns (ListAreasResponse);
}

enum CastVisibility {
  CAST_VISIBILITY_UNSPECIFIED = 0;
  CAST_VISIBILITY_UNREGISTERED = 1; // Onboarding not complete
  CAST_VISIBILITY_UNPUBLISHED = 2;  // Onboarding complete, not visible
  CAST_VISIBILITY_PUBLISHED = 3;    // Visible to guests
}

message SocialLinks {
  string x = 1;
  string instagram = 2;
  string tiktok = 3;
  string cityheaven = 4;
  string litlink = 5;
  repeated string others = 6;
}

message ThreeSizes {
  int32 bust = 1;
  int32 waist = 2;
  int32 hip = 3;
  string cup = 4;
}

message Area {
  string id = 1;
  string prefecture = 2;
  string name = 3;
  string code = 4;
}

message CastProfile {
  string user_id = 1;
  string name = 2;
  string bio = 3;
  string image_url = 4;
  CastVisibility visibility = 5;
  repeated string images = 6;
  string image_path = 7;
  string tagline = 8;
  string default_schedule_start = 9;
  string default_schedule_end = 10;
  SocialLinks social_links = 11;
  int32 age = 12;
  int32 height = 13;
  string blood_type = 14;
  ThreeSizes three_sizes = 15;
  repeated string tags = 16;
  string avatar_path = 17;
  string avatar_url = 18;
  string handle = 19;
  repeated Area areas = 20;
}

message CastPlan {
  string id = 1;
  string name = 2;
  int32 price = 3; // JPY
  int32 duration_minutes = 4;
}

message GetCastProfileRequest {
  string user_id = 1; // [(buf.validate.field).string.uuid = true];
}

message GetCastProfileResponse {
  CastProfile profile = 1;
  repeated CastPlan plans = 2;
  repeated CastSchedule schedules = 3;
}

message CreateCastProfileRequest {
  string name = 1;
  string bio = 2;
  string image_path = 3;
  string tagline = 4;
  string default_schedule_start = 5;
  string default_schedule_end = 6;
  SocialLinks social_links = 7;
  int32 age = 8;
  int32 height = 9;
  string blood_type = 10;
  ThreeSizes three_sizes = 11;
  repeated string tags = 12;
}

message CreateCastProfileResponse {
  CastProfile profile = 1;
}

message SaveCastProfileRequest {
  string name = 1;
  string bio = 2;
  string image_path = 3;
  string tagline = 4;
  string default_schedule_start = 5;
  string default_schedule_end = 6;
  SocialLinks social_links = 7;
  CastVisibility visibility = 8;
  int32 age = 9;
  int32 height = 10;
  string blood_type = 11;
  ThreeSizes three_sizes = 12;
  repeated string tags = 13;
  string handle = 14;
  repeated string area_ids = 15;
}

message SaveCastProfileResponse {
  CastProfile profile = 1;
}

message SaveCastVisibilityRequest {
  CastVisibility visibility = 1;
}

message SaveCastVisibilityResponse {
  CastProfile profile = 1;
}

message SaveCastImagesRequest {
  string profile_image_path = 1; // Cover/Profile image
  repeated string gallery_images = 2; // List of image URLs or Paths
  string avatar_path = 3;             // Square avatar image (S3 key)
}

message SaveCastImagesResponse {
  CastProfile profile = 1;
}

message SaveCastPlansRequest {
  repeated CastPlan plans = 1;
}

message SaveCastPlansResponse {
  repeated CastPlan plans = 1;
}

message SaveCastSchedulesRequest {
  repeated CastSchedule schedules = 1;
}

message SaveCastSchedulesResponse {
  repeated CastSchedule schedules = 1;
}

message GetUploadUrlRequest {
  string filename = 1;
  string content_type = 2;
}

message GetUploadUrlResponse {
  string url = 1;
  string key = 2;
}

message CastSchedule {
  string date = 1; // YYYY-MM-DD
  string start_time = 2; // HH:mm
  string end_time = 3; // HH:mm
  string plan_id = 4; // Optional
}

message ListCastsRequest {
  // Add filters if needed, e.g. visibility
  CastVisibility visibility_filter = 1;
}

message ListCastsResponse {
  message CastItem {
    CastProfile profile = 1;
    repeated CastPlan plans = 2;
  }
  repeated CastItem items = 1;
}

message GetCastProfileByHandleRequest {
  string handle = 1;
}

message CheckHandleAvailabilityRequest {
  string handle = 1;
}

message CheckHandleAvailabilityResponse {
  bool available = 1;
  string message = 2;
}

message ListAreasRequest {
  // Optional: filter by prefecture
  string prefecture = 1;
}

message ListAreasResponse {
  repeated Area areas = 1;
}
